Add crontab and couchbackup

--- a/scripts/supervisord.conf
+++ b/scripts/supervisord.conf
@@ -3,10 +3,15 @@ nodaemon=true
 loglevel=debug
 
 [program:crond]
-command = /usr/sbin/cron
-user = root
-autostart = true
+command=/usr/sbin/cron -f -L 15
+user=root
+autostart=true
+autorestart=true
 
-[program:assist]
-command=bash -c "/scripts/assist.sh"
-redirect_stderr=true
+# [program:assist]
+# command=bash -c "/scripts/assist.sh"
+# redirect_stderr=true
+
+# [program:couch]
+# command=bash -c "/scripts/couch.sh"
+# redirect_stderr=true
